FIX: Add authentication for image pull

--- a/kubernetes/backend/backend/templates/deployment.yaml
+++ b/kubernetes/backend/backend/templates/deployment.yaml
@@ -26,4 +26,4 @@ spec:
           ports: 
             - containerPort: {{.Values.service.port}}
       imagePullSecrets:
-      - name: "gcp-pr-sa@gcp-project-replica-391115.iam.gserviceaccount.com"
+      - name: artifact-registry
