--- a/kubernetes/backend/backend/templates/deployment.yaml
+++ b/kubernetes/backend/backend/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{.Values.appName}}
+  name: {{.Values.name}}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -13,7 +13,7 @@ spec:
         app: {{.Values.appName}}
     spec:
       containers:
-        - name: {{.Values.appName}}
+        - name: {{.Values.name}}
           image: {{.Values.image.repository}}{{.Values.image.repoImgVersion}}
           ports: 
             - containerPort: {{.Values.service.port}}
