--- a/kubernetes/frontend/frontend/templates/service.yaml
+++ b/kubernetes/frontend/frontend/templates/service.yaml
@@ -1,15 +1,25 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "frontend.fullname" . }}
+  name: {{.Values.name}}
+  namespace: default
+  annotations:
+    prometheus.io/port: {{.Values.metrics.port}}
+    prometheus.io/scrape: "true"
+    prometheus.io/path: /actuator/prometheus
   labels:
-    {{- include "frontend.labels" . | nindent 4 }}
+    app.kubernetes.io/part-of: {{.Values.appName}}
+
 spec:
-  type: {{ .Values.service.type }}
+  type: {{.Values.service.type}}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
+    - port: {{.Values.service.port}}
+      targetPort: {{.Values.service.fwdPort}}
       protocol: TCP
-      name: http
+      name: {{.Values.service.name}}
+    - port: 9000
+      targetPort: {{.Values.service.port}}
+      name: {{.Values.metrics.port}}
+      protocol: TCP
   selector:
-    {{- include "frontend.selectorLabels" . | nindent 4 }}
+    app: {{.Values.name}}
