UPDATE: add ingress

--- a/kubernetes/frontend/frontend/templates/ingress.yaml
+++ b/kubernetes/frontend/frontend/templates/ingress.yaml
@@ -5,6 +5,6 @@ metadata:
 spec:
   defaultBackend:
     service:
-      name: {{.Values.appName}}
+      name: {{.Values.name}}
       port:
         number: {{.Values.service.port}}
