--- a/kubernetes/frontend/frontend/values.yaml
+++ b/kubernetes/frontend/frontend/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 name: gcp-pr-fe
-appName: gcp-pr
+appName: gcp-pr-fe
 
 image:
   repository: europe-west2-docker.pkg.dev/gcp-project-replica-391115/gcp-pr-container-reg-fe/gcp-pr-fe
