--- a/kubernetes/frontend/frontend/templates/ingress.yaml
+++ b/kubernetes/frontend/frontend/templates/ingress.yaml
@@ -2,9 +2,23 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: gcp-pr-ingress
+  annotations:
+    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
 spec:
-  defaultBackend:
-    service:
-      name: {{.Values.name}}
-      port:
-        number: {{.Values.service.port}}
+  rules:
+    - http:
+      paths:
+        - path: /*
+          pathType: ImplementationSpecific
+          backend:
+            service:
+              name: {{.Values.name}}
+              port:
+                number: {{.Values.service.port}}
+        - path: /v2/*
+          pathType: ImplementationSpecific
+          backend:
+            service:
+              name: {{.Values.backend.name}}
+              port:
+                number: {{.Values.backend.port}}
