UPDATE: add ingress path for backend

--- a/kubernetes/frontend/frontend/templates/ingress.yaml
+++ b/kubernetes/frontend/frontend/templates/ingress.yaml
@@ -19,6 +19,6 @@ spec:
           pathType: ImplementationSpecific
           backend:
             service:
-              name: {{.Values.name}}
+              name: {{.Values.backend.name}}
               port:
                 number: {{.Values.backend.port}}
