--- a/kubernetes/frontend/frontend/templates/service.yaml
+++ b/kubernetes/frontend/frontend/templates/service.yaml
@@ -18,7 +18,7 @@ spec:
       protocol: TCP
       name: {{.Values.service.name}}
     - port: 9000
-      targetPort: {{.Values.service.port}}
+      targetPort: {{.Values.service.fwdPort}}
       name: {{.Values.metrics.port}}
       protocol: TCP
   selector:
