--- a/kubernetes/frontend/frontend/templates/ingress.yaml
+++ b/kubernetes/frontend/frontend/templates/ingress.yaml
@@ -15,7 +15,7 @@ spec:
     - http:
       paths:
         - path: /backend/*
-          pathType: ImplementationSpecific
+          pathType: Prefix
           backend:
             service:
               name: {{.Values.backend.name}}
