FIX: Update ingress

--- a/kubernetes/backend/backend/values.yaml
+++ b/kubernetes/backend/backend/values.yaml
@@ -9,7 +9,7 @@ image:
   pullPolicy: IfNotPresent
 
 service:
-  type: NodePort
+  type: LoadBalancer
   port: 8080
   name: backend-service
   fwdPort: 8080 
