--- a/kubernetes/frontend/frontend/values.yaml
+++ b/kubernetes/frontend/frontend/values.yaml
@@ -13,7 +13,7 @@ image:
   pullPolicy: IfNotPresent
 
 service:
-  type: NodePort
+  type: LoadBalancer
   port: 5173
   fwdPort: 80
   name: frontend-service
