UPDATE: update frontend image version

--- a/kubernetes/frontend/frontend/templates/deployment.yaml
+++ b/kubernetes/frontend/frontend/templates/deployment.yaml
@@ -7,10 +7,12 @@ spec:
   selector:
     matchLabels:
       app: {{.Values.appName}}
+      tier: frontend
   template:
     metadata:
       labels:
         app: {{.Values.appName}}
+        tier: frontend
     spec:
       containers:
         - name: {{.Values.name}}
