--- a/kubernetes/backend/backend/templates/deployment.yaml
+++ b/kubernetes/backend/backend/templates/deployment.yaml
@@ -7,13 +7,15 @@ spec:
   selector:
     matchLabels:
       app: {{.Values.appName}}
+      tier: backend
   template:
     metadata:
       labels:
         app: {{.Values.appName}}
+        tier: backend
     spec:
       containers:
-        - name: {{.Values.name}}
+        - name: {{.Values.appName}}
           image: {{.Values.image.repository}}{{.Values.image.repoImgVersion}}
           ports: 
             - containerPort: {{.Values.service.port}}
