--- a/kubernetes/backend/backend/templates/service.yaml
+++ b/kubernetes/backend/backend/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{.Values.name}}
+  name: {{.Values.appName}}
   namespace: default
   annotations:
     prometheus.io/port: {{.Values.metrics.port}}
@@ -22,4 +22,5 @@ spec:
       name: {{.Values.metrics.port}}
       protocol: TCP
   selector:
-    app: {{.Values.name}}
+    app: {{.Values.appName}}
+    tier: backend
