--- a/kubernetes/backend/backend/templates/service.yaml
+++ b/kubernetes/backend/backend/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{.Values.appName}}
+  name: {{.Values.name}}
   namespace: default
   annotations:
     prometheus.io/port: {{.Values.metrics.port}}
