UPDATE: update frontend image version

--- a/kubernetes/frontend/frontend/values.yaml
+++ b/kubernetes/frontend/frontend/values.yaml
@@ -9,7 +9,7 @@ image:
   pullPolicy: IfNotPresent
 
 service:
-  type: ClusterIP
+  type: NodePort
   port: 5173
   fwdPort: 80
   name: frontend-service
