--- a/kubernetes/backend/backend/templates/ingress.yaml
+++ b/kubernetes/backend/backend/templates/ingress.yaml
@@ -1,15 +1,15 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: gcp-pr-be-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "http://34.160.50.79"
-    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
-    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
-spec:
-  defaultBackend:
-    service:
-      name: {{.Values.name}}
-      port:
-        number: {{.Values.service.port}}
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: gcp-pr-be-ingress
+#   annotations:
+#     nginx.ingress.kubernetes.io/enable-cors: "true"
+#     nginx.ingress.kubernetes.io/cors-allow-origin: "http://34.160.50.79"
+#     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
+#     nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
+# spec:
+#   defaultBackend:
+#     service:
+#       name: {{.Values.name}}
+#       port:
+#         number: {{.Values.service.port}}
