--- a/kubernetes/backend/backend/templates/ingress.yaml
+++ b/kubernetes/backend/backend/templates/ingress.yaml
@@ -4,10 +4,10 @@ metadata:
   name: gcp-pr-be-ingress
   annotations:
     kubernetes.io/ingress.global-static-ip-name: "be-web-static-ip"
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "http://34.160.50.79"
-    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
-    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
+    # nginx.ingress.kubernetes.io/enable-cors: "true"
+    # nginx.ingress.kubernetes.io/cors-allow-origin: "http://34.160.50.79"
+    # nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
+    # nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
 spec:
   defaultBackend:
     service:
