--- a/kubernetes/backend/backend/templates/ingress.yaml
+++ b/kubernetes/backend/backend/templates/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.global-static-ip-name: "be-web-static-ip"
     nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "http://34.160.50.79/*"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "http://34.160.50.79"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
     networking.gke.io/load-balancer-type: "Internal"
@@ -15,3 +15,13 @@ spec:
       name: {{.Values.name}}
       port:
         number: {{.Values.service.port}}
+  rules:
+    - http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: {{.Values.name}}
+                port:
+                  number: {{.Values.service.port}}
