--- a/kubernetes/frontend/frontend/templates/ingress.yaml
+++ b/kubernetes/frontend/frontend/templates/ingress.yaml
@@ -3,12 +3,11 @@ kind: Ingress
 metadata:
   name: gcp-pr-ingress
   annotations:
-    kubernetes.io/ingress.class: "nginx"
     kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
-    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
-    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
+    ingress.kubernetes.io/enable-cors: "true"
+    ingress.kubernetes.io/cors-allow-origin: "*"
+    ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
+    ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
 spec:
   defaultBackend:
     service:
