--- a/kubernetes/frontend/frontend/templates/ingress.yaml
+++ b/kubernetes/frontend/frontend/templates/ingress.yaml
@@ -8,6 +8,10 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
+    nginx.ingress.kubernetes.io/server-snippet: |
+      etag on;
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "server: hide";
 spec:
   defaultBackend:
     service:
