--- a/kubernetes/backend/backend/templates/ingress.yaml
+++ b/kubernetes/backend/backend/templates/ingress.yaml
@@ -8,19 +8,13 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
+    nginx.ingress.kubernetes.io/server-snippet: |
+      etag on;
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "server: hide";
 spec:
   defaultBackend:
     service:
       name: {{.Values.name}}
       port:
         number: {{.Values.service.port}}
-  rules:
-    - http:
-        paths:
-          - pathType: Prefix
-            path: "/"
-            backend:
-              service:
-                name: {{.Values.name}}
-                port:
-                  number: {{.Values.service.port}}
