--- a/kubernetes/frontend/frontend/values.yaml
+++ b/kubernetes/frontend/frontend/values.yaml
@@ -2,6 +2,7 @@ replicaCount: 1
 
 name: gcp-pr-fe
 appName: gcp-pr
+be-name: gcp-pr-be
 
 image:
   repository: europe-west2-docker.pkg.dev/gcp-project-replica-391115/gcp-pr-container-reg-fe/gcp-pr-fe
@@ -13,6 +14,7 @@ service:
   port: 5173
   fwdPort: 80
   name: frontend-service
+  be-port: 8080
 
 metrics:
   port: metrics-fe
