--- a/kubernetes/frontend/frontend/templates/ingress.yaml
+++ b/kubernetes/frontend/frontend/templates/ingress.yaml
@@ -25,6 +25,6 @@ spec:
             path: "/api"
             backend:
               service:
-                name: {{.Values.be-name}}
+                name: {{.Values.beName}}
                 port:
-                  number: {{.Values.service.be-port}}
+                  number: {{.Values.service.bePort}}
