--- a/kubernetes/frontend/frontend/templates/ingress.yaml
+++ b/kubernetes/frontend/frontend/templates/ingress.yaml
@@ -22,6 +22,13 @@ spec:
     - http:
         paths:
           - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: {{.Values.name}}
+                port:
+                  number: {{.Values.service.port}}
+          - pathType: Prefix
             path: "/api"
             backend:
               service:
