UPDATE: Try BE ingress

--- a/kubernetes/frontend/frontend/templates/ingress.yaml
+++ b/kubernetes/frontend/frontend/templates/ingress.yaml
@@ -29,7 +29,7 @@ spec:
                 port:
                   number: {{.Values.service.port}}
           - pathType: Prefix
-            path: "/api"
+            path: "/api/*"
             backend:
               service:
                 name: {{.Values.beName}}
