UPDATE: Try BE ingress

--- a/kubernetes/backend/backend/templates/ingress.yaml
+++ b/kubernetes/backend/backend/templates/ingress.yaml
@@ -1,26 +1,30 @@
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: gcp-pr-be-ingress
-#   annotations:
-#     kubernetes.io/ingress.global-static-ip-name: "be-web-static-ip"
-#     nginx.ingress.kubernetes.io/enable-cors: "true"
-#     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
-#     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
-#     nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
-# spec:
-#   defaultBackend:
-#     service:
-#       name: {{.Values.name}}
-#       port:
-#         number: {{.Values.service.port}}
-#   rules:
-#     - http:
-#         paths:
-#           - pathType: Prefix
-#             path: "/"
-#             backend:
-#               service:
-#                 name: {{.Values.name}}
-#                 port:
-#                   number: {{.Values.service.port}}
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: gcp-pr-ingress
+  annotations:
+    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
+    nginx.ingress.kubernetes.io/server-snippet: |
+      etag on;
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "server: hide";
+spec:
+  defaultBackend:
+    service:
+      name: {{.Values.feName}}
+      port:
+        number: {{.Values.service.fePort}}
+  rules:
+    - http:
+        paths:
+          - pathType: Prefix
+            path: "/api"
+            backend:
+              service:
+                name: {{.Values.name}}
+                port:
+                  number: {{.Values.service.port}}
