UPDATE: Try BE ingress

--- a/kubernetes/backend/backend/templates/ingress.yaml
+++ b/kubernetes/backend/backend/templates/ingress.yaml
@@ -22,7 +22,7 @@ spec:
     - http:
         paths:
           - pathType: Prefix
-            path: "/api"
+            path: "/gcp-pr-be.default.svc.cluster.local"
             backend:
               service:
                 name: {{.Values.name}}
