--- a/kubernetes/backend/backend/templates/ingress.yaml
+++ b/kubernetes/backend/backend/templates/ingress.yaml
@@ -13,11 +13,11 @@ metadata:
     nginx.ingress.kubernetes.io/configuration-snippet: |
       more_set_headers "server: hide";
 spec:
-  defaultBackend:
-    service:
-      name: {{.Values.feName}}
-      port:
-        number: {{.Values.service.fePort}}
+  #   defaultBackend:
+  #     service:
+  #       name: {{.Values.feName}}
+  #       port:
+  #         number: {{.Values.service.fePort}}
   rules:
     - http:
         paths:
@@ -28,3 +28,10 @@ spec:
                 name: {{.Values.name}}
                 port:
                   number: {{.Values.service.port}}
+          - pathType: Prefix
+            path: "/"
+            backend:
+            service:
+              name: {{.Values.feName}}
+              port:
+              number: {{.Values.service.fePort}}
