UPDATE: Try BE ingress

--- a/kubernetes/backend/backend/templates/ingress.yaml
+++ b/kubernetes/backend/backend/templates/ingress.yaml
@@ -19,8 +19,7 @@ spec:
   #       port:
   #         number: {{.Values.service.fePort}}
   rules:
-    - host: 34.160.50.79
-      http:
+    - http:
         paths:
           - pathType: Prefix
             path: "/gcp-pr-be.default.svc.cluster.local"
