--- a/kubernetes/backend/backend/templates/deployment.yaml
+++ b/kubernetes/backend/backend/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
           image: {{.Values.image.repository}}{{.Values.image.repoImgVersion}}
           readinessProbe:
             httpGet:
-              path: /actuator.health
+              path: /actuator/health
               port: {{.Values.service.port}}
             initialDelaySeconds: 10
             timeoutSeconds: 5
