FEAT: add service monitor

--- a/kubernetes/backend/backend/templates/service-monitor.yaml
+++ b/kubernetes/backend/backend/templates/service-monitor.yaml
@@ -1,18 +1,18 @@
-# apiVersion: monitoring.coreos.com/v1
-# kind: ServiceMonitor
-# metadata:
-#   name: gcp-pr-be-service-monitor
-#   namespace: default
-# spec:
-#   endpoints:
-#     - interval: 15s
-#       path: /actuator/prometheus
-#       port: {{.Values.metrics.port}}
-#       scheme: http
-#       scrapeTimeout: 14s
-#   namespaceSelector:
-#     matchNames:
-#       - default
-#   selector:
-#     matchLabels:
-#       app.kubernetes.io/part-of: {{.Values.appName}}
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: gcp-pr-be-service-monitor
+  namespace: default
+spec:
+  endpoints:
+    - interval: 15s
+      path: /actuator/prometheus
+      port: {{.Values.metrics.port}}
+      scheme: http
+      scrapeTimeout: 14s
+  namespaceSelector:
+    matchNames:
+      - default
+  selector:
+    matchLabels:
+      app.kubernetes.io/part-of: {{.Values.appName}}
