FEAT: add service monitor

--- a/kubernetes/backend/backend/templates/service-monitor.yaml
+++ b/kubernetes/backend/backend/templates/service-monitor.yaml
@@ -15,4 +15,4 @@ spec:
       - default
   selector:
     matchLabels:
-      app.kubernetes.io/part-of: {{.Values.appName}}
+      app.kubernetes.io/part-of: {{.Values.name}}
