--- a/kubernetes/backend/backend/templates/service.yaml
+++ b/kubernetes/backend/backend/templates/service.yaml
@@ -8,7 +8,7 @@ metadata:
     prometheus.io/scrape: "true"
     prometheus.io/path: /actuator/prometheus
   labels:
-    app.kubernetes.io/part-of: {{.Values.appName}}
+    app.kubernetes.io/part-of: {{.Values.name}}
 
 spec:
   type: {{.Values.service.type}}
