--- a/kubernetes/frontend/frontend/templates/service.yaml
+++ b/kubernetes/frontend/frontend/templates/service.yaml
@@ -7,7 +7,7 @@ metadata:
     prometheus.io/port: {{.Values.metrics.port}}
     prometheus.io/scrape: "true"
   labels:
-    app.kubernetes.io/part-of: {{.Values.appName}}
+    app.kubernetes.io/part-of: {{.Values.name}}
 
 spec:
   type: {{.Values.service.type}}
